--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ header {
     background-color:rgba(192,192,192,0.3);
     padding: 5px;
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: 4px;
+    left: 7px;
 }
 
 .card {
